sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: illegal start of simple expression
              while (change==true)}}       
                                  ^AlgBubbleSort1:9: error: 'while' expected but '}' found.
              while (change==true)}}       
                                   ^